<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.heriparid.android</groupId>
    <artifactId>simple-maven</artifactId>
    <version>0.1.0</version>
    <packaging>apk</packaging>

    <properties>
        <!-- use UTF-8 for everything -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <android.platform>18</android.platform>
		<android.version>4.3</android.version>
        <robolectric.version>2.3</robolectric.version>
		<junit.version>4.10</junit.version>
		<easymock.version>3.1</easymock.version>
		<objenesis.version>1.2</objenesis.version>
		<cglib.version>2.2.2</cglib.version>
        <android.sdk.path>/home/heri/DEVKIT/SDK/android-sdk-linux/</android.sdk.path>
    </properties>
    
    <repositories>
	    <repository>
	        <id>android-support</id>
	        <url>file://${android.sdk.path}extras/android/m2repository</url>
	    </repository>
	</repositories>

    <dependencies>
        <dependency>
            <groupId>com.google.android</groupId>
            <artifactId>android</artifactId>
            <version>18</version>
			<scope>system</scope>
			<systemPath>${android.sdk.path}platforms/android-18/android.jar</systemPath>
        </dependency>
       <dependency>
		    <groupId>com.android.support</groupId>
		    <artifactId>support-v4</artifactId>
		    <version>19.0.1</version>
		</dependency>
        
        <!-- Test dependencies -->
        <dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib-nodep</artifactId>
			<version>${cglib.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>${easymock.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.objenesis</groupId>
			<artifactId>objenesis</artifactId>
			<version>${objenesis.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.robolectric</groupId>
			<artifactId>robolectric</artifactId>
			<version>${robolectric.version}</version>
			<scope>test</scope>
			<classifier>jar-with-dependencies</classifier>
		</dependency>
        
    </dependencies>

    <build>
    
    	<finalName>${project.artifactId}-${project.version}</finalName>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>src_test</testSourceDirectory>
    
    	<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.jayway.maven.plugins.android.generation2</groupId>
					<artifactId>android-maven-plugin</artifactId>
					<version>3.9.0-rc.2</version>
					<extensions>true</extensions>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.jayway.maven.plugins.android.generation2
										</groupId>
										<artifactId>
											android-maven-plugin
										</artifactId>
										<versionRange>
											[3.9.0-rc.2,)
										</versionRange>
										<goals>
											<goal>proguard</goal>
											<goal>
												generate-sources
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<!-- See http://code.google.com/p/maven-android-plugin/ -->
				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
				<artifactId>android-maven-plugin</artifactId>
				<version>3.9.0-rc.2</version>
				<configuration>
					<sdk>
						<!-- platform or api level (api level 8 = platform 2.2) -->
						<platform>${android.platform}</platform>
					</sdk>
				</configuration>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<!--disableXmlReport>true</disableXmlReport -->
					<forkCount>4</forkCount>
					<reuseForks>false</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
					<testFailureIgnore>false</testFailureIgnore>
					<systemProperties>
						<property>
							<name>jmockit-coverage-outputDir</name>
							<value>target/coverage-report</value>
						</property>
					</systemProperties>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
		</plugins>
    </build>

</project>